# api/src/models/playlist_get_params.rs
@@ -13,19 +13,13 @@
 
 #[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
 pub struct PlaylistGetParams {
-    #[serde(rename = "language", skip_serializing_if = "Option::is_none")]
-    pub language: Option<String>,
-    #[serde(rename = "authPath")]
-    pub auth_path: String,
     #[serde(rename = "playlistId")]
     pub playlist_id: String,
 }
 
 impl PlaylistGetParams {
-    pub fn new(auth_path: String, playlist_id: String) -> PlaylistGetParams {
+    pub fn new(playlist_id: String) -> PlaylistGetParams {
         PlaylistGetParams {
-            language: None,
-            auth_path,
             playlist_id,
         }
     }
